# appstream-generator

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  MAINTAINERS  Makefile  NEWS  README.md  RELEASE  TODO  autoformat.py  autoformat.sh  dub.json  meson.build  meson_options.txt  snapcraft.yaml
.github/workflows/: build-test.yml  codeql.yml  coverity.yml
contrib/: cleanup-cruft.sh.example  update-metadata.sh.example
contrib/girwrap/: APILookup.txt  APILookupAppStream.txt  APILookupAppStreamCompose.txt  APILookupGLib.txt  APILookupGObject.txt  APILookupGdkPixbuf.txt  APILookupGio.txt  APILookupSoup.txt  find-d-intf-files.py  find-d-intf-files.sh
contrib/setup/: .bowerrc  .gitignore  build_js.sh  install.sh  meson-install-templates.sh  package-lock.json  package.json
contrib/subprojects/: .gitignore  backward-cpp.wrap  dcontainers.wrap  dxml.wrap  inja.wrap  mustache-d.wrap
data/: .gitignore  asgen-hints.json  dep11-hints.yml  meson.build  org.freedesktop.appstream.generator.metainfo.xml
data/templates/debian/: base.html  main.html
data/templates/debian/static/: img  js
data/templates/debian/static/css/: highlight.css  style.css
data/templates/default/: base.html  issues_index.html  issues_page.html  main.html  metainfo_index.html  metainfo_page.html  section_overview.html  section_page.html  sections_index.html  suites_index.html
data/templates/default/static/css/: highlight.css  style.css
data/templates/default/static/js/: .gitignore  d3.layout.min.js  highlight.js  highlight.pack.js  rickshaw.min.js
docs/: appstream-generator.1.xml  asgen-config.md  index.md  meson.build  usage.md
source/: app.d  archive.d  config.d  contentscache.d  contentsstore.d  data-cache.d  datacache.d  datastore.d  engine.d  extractor.d  font.d  hint.d  image.d  logging.d  report-generator.d  reportgenerator.d  result.d  utils.d  zarchive.d
source/backends/: interfaces.d
source/backends/arch/: alpkg.d  alpkgindex.d  listfile.d  pkgindex.d
source/bindings/: appstream_utils.d  asgenstdlib.d  cairo.d  concurrency_generator.d  fontconfig.d  freetype.d  freetypeTypes.d  gd.d  gdk-pixbuf.d  gdkpixbuf.d  libarchive.d  lmdb.d  pango.d  rsvg.d  stdgenerator.d
source/handlers/: desktopparser.d  fonthandler.d  iconhandler.d  metainfoparser.d  metainfovalidator.d  package.d  screenshothandler.d
src/: app.d  config.cpp  config.h  contentsstore.cpp  contentsstore.h  cptmodifiers.cpp  cptmodifiers.h  datainjectpkg.cpp  datainjectpkg.h  datastore.cpp  datastore.h  dataunits.cpp  dataunits.h  downloader.cpp  downloader.h  engine.cpp  engine.h  extractor.cpp  extractor.h  hintregistry.cpp  hintregistry.h  iconhandler.cpp  iconhandler.h  logging.cpp  logging.h  main.cpp  meson.build  reportgenerator.cpp  reportgenerator.h  result.cpp  result.h  srcunits.cpp  utils.cpp  utils.h  yaml-utils.cpp  yaml-utils.h  zarchive.cpp  zarchive.h
src/asgen/: config.d  contentsstore.d  cptmodifiers.d  datainjectpkg.d  datastore.d  defines.d.in  downloader.d  engine.d  extractor.d  fcmutex.d  font.d  hint.d  hintregistry.d  iconhandler.d  image.d  localeunit.d  logging.d  meson.build  mustache.d  packageunit.d  reportgenerator.d  result.d  resultutils.d  utils.d  zarchive.d
src/asgen/backends/: interfaces.d
src/asgen/backends/alpinelinux/: apkindexutils.d  apkpkg.d  apkpkgindex.d  package.d
src/asgen/backends/archlinux/: alpkg.d  alpkgindex.d  listfile.d  package.d
src/asgen/backends/debian/: debpkg.d  debpkgindex.d  debutils.d  package.d  tagfile.d
src/asgen/backends/dummy/: dummypkg.d  package.d  pkgindex.d
src/asgen/backends/freebsd/: fbsdpkg.d  fbsdpkgindex.d  package.d
src/asgen/backends/nix/: nixindexutils.d  nixpkg.d  nixpkgindex.d  package.d
src/asgen/backends/rpmmd/: package.d  rpmpkg.d  rpmpkgindex.d  rpmutils.d
src/asgen/backends/solus/: eopkgpkg.d  eopkgpkgindex.d  package.d
src/asgen/backends/ubuntu/: package.d  ubupkg.d  ubupkgindex.d
src/asgen/bindings/: appstream_utils.d  asutils.d  cairo.d  concurrency_generator.d  fontconfig.d  freetype.d  freetypeTypes.d  gdkpixbuf.d  libarchive.d  lmdb.d  pango.d  rsvg.d  soup.d
src/asgen/containers/: hash.d  hashmap.d  lists.d  package.d
src/asgen/handlers/: desktopparser.d  fonthandler.d  iconhandler.d  localehandler.d  metainfoparser.d  metainfovalidator.d  package.d  screenshothandler.d
src/backends/: interfaces.cpp  interfaces.h  meson.build
src/backends/alpinelinux/: apkindexutils.cpp  apkindexutils.h  apkpkg.cpp  apkpkg.h  apkpkgindex.cpp  apkpkgindex.h  meson.build
src/backends/archlinux/: alpkg.cpp  alpkg.h  alpkgindex.cpp  alpkgindex.h  listfile.cpp  listfile.h  meson.build
src/backends/debian/: debpkg.cpp  debpkg.h  debpkgindex.cpp  debpkgindex.h  debutils.cpp  debutils.h  meson.build  tagfile.cpp  tagfile.h
src/backends/dummy/: dummypkg.cpp  dummypkg.h  meson.build  pkgindex.cpp  pkgindex.h
src/backends/freebsd/: fbsdpkg.cpp  fbsdpkg.h  fbsdpkgindex.cpp  fbsdpkgindex.h  meson.build
src/backends/nix/: meson.build  nixindexutils.cpp  nixindexutils.h  nixpkg.cpp  nixpkg.h  nixpkgindex.cpp  nixpkgindex.h
src/backends/rpmmd/: meson.build  rpmpkg.cpp  rpmpkg.h  rpmpkgindex.cpp  rpmpkgindex.h  rpmutils.cpp  rpmutils.h
src/backends/ubuntu/: meson.build  ubupkg.cpp  ubupkg.h  ubupkgindex.cpp  ubupkgindex.h
test/ci/: Dockerfile  build_and_test.sh
test/samples/: test.tar.xz
tests/: dscanner.ini  meson.build  run-dscanner.sh  tests-backend-debian.cpp  tests-backend-misc.cpp  tests-db.cpp  tests-engine.cpp  tests-icons.cpp  tests-misc.cpp  tests-net.cpp  tests-report.cpp
tests/ci/: Dockerfile  Dockerfile-debian-stable  Dockerfile-debian-testing  Dockerfile-fedora-latest  Dockerfile-fedora-rawhide  build-and-test.sh  build_and_test.sh  ci-install-extern.sh  install-deps-deb.sh  install-deps-rpm.sh  run-build.sh  run-dscanner.py  run-dscanner.sh  run-tests.sh
tests/samples/: sample-video-credit.txt  sample-video.mkv  test.tar.xz
tests/samples/debian/dists/sid/: InRelease
tests/samples/extra-metainfo/: modifications.json
tests/samples/mo/de/: appstream.mo
(+25 files in other folders)
