#
# Options for AppStream Generator
#

option('download-js',
       type: 'boolean',
       value: true,
       description: 'Download JavaScript with NPM automatically.'
)

option('maintainer',
       type : 'boolean',
       value : false,
       description : 'Enable maintainer mode (use strict compiler flags, e.g. -Werror)'
)

option('extra-prefix',
       type: 'string',
       value: '',
       description: 'Additional prefix where software might be installed'
)
